{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 99,
  "lineage": "fece9e7f-048d-0898-b256-647cb526309a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rcc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534385635546:internet-gateway/igw-0bb114216866f5dee",
            "id": "igw-0bb114216866f5dee",
            "owner_id": "534385635546",
            "tags": {
              "Name": "resistor_color_code-igw"
            },
            "tags_all": {
              "Name": "resistor_color_code-igw"
            },
            "vpc_id": "vpc-0ed6ca01b84eb3add"
          },
          "dependencies": [
            "aws_vpc.rcc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rcc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534385635546:route-table/rtb-0696f7cbde569b8f8",
            "id": "rtb-0696f7cbde569b8f8",
            "owner_id": "534385635546",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb114216866f5dee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resistor_color_code-rt"
            },
            "tags_all": {
              "Name": "resistor_color_code-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed6ca01b84eb3add"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rcc_igw",
            "aws_vpc.rcc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rcc_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060c57b0b6754084d",
            "route_table_id": "rtb-0696f7cbde569b8f8",
            "subnet_id": "subnet-0894bf2a279298363"
          },
          "dependencies": [
            "aws_internet_gateway.rcc_igw",
            "aws_route_table.rcc_rt",
            "aws_subnet.rcc_subnet",
            "aws_vpc.rcc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rcc_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534385635546:security-group/sg-027d6aee00e171a3f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-027d6aee00e171a3f",
            "ingress": [],
            "name": "rcc-SG",
            "name_prefix": "",
            "owner_id": "534385635546",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resistor_color_code-SG"
            },
            "tags_all": {
              "Name": "resistor_color_code-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed6ca01b84eb3add"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rcc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rcc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534385635546:subnet/subnet-0894bf2a279298363",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0894bf2a279298363",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "534385635546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resistor_color_code-subnet"
            },
            "tags_all": {
              "Name": "resistor_color_code-subnet"
            },
            "vpc_id": "vpc-0ed6ca01b84eb3add"
          },
          "dependencies": [
            "aws_vpc.rcc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rcc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534385635546:vpc/vpc-0ed6ca01b84eb3add",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e82938180d6ab69",
            "default_route_table_id": "rtb-0f26915667f2642b3",
            "default_security_group_id": "sg-04a2b3f5973e4ce2f",
            "dhcp_options_id": "dopt-06e22d01727124a6f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed6ca01b84eb3add",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f26915667f2642b3",
            "owner_id": "534385635546",
            "tags": {
              "Name": "resistor_color_code-vpc"
            },
            "tags_all": {
              "Name": "resistor_color_code-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rcc_outbound_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534385635546:security-group-rule/sgr-0aea8a475666f7f74",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0aea8a475666f7f74",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-027d6aee00e171a3f",
            "security_group_rule_id": "sgr-0aea8a475666f7f74",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rcc_SG",
            "aws_vpc.rcc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rcc_inbound_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534385635546:security-group-rule/sgr-01566cbd28d8c6187",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5001,
            "id": "sgr-01566cbd28d8c6187",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-027d6aee00e171a3f",
            "security_group_rule_id": "sgr-01566cbd28d8c6187",
            "tags": null,
            "tags_all": {},
            "to_port": 5001
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rcc_SG",
            "aws_vpc.rcc_vpc"
          ]
        }
      ]
    }
  ]
}